@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2012, 2021, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2012, 2022, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -107,6 +107,20 @@ public class Env {
 
     Set<Pattern> includePackages;
     Set<Pattern> excludePackages;
+
+    /**
+     * How to handle bad references.
+     *
+     * If {@code false}, a reference into a module that is not
+     * in the module graph will just be reported as a warning.
+     * All other bad references will be reported as errors.
+     * This is the desired behavior for javac.
+     *
+     * If {@code true}, all bad references will be reported as
+     * errors. This is the desired behavior for javadoc.
+     *
+     */
+    boolean strictReferenceChecks = false;
 
     // Utility classes
     DocTrees trees;
@@ -348,7 +362,7 @@ public class Env {
 
             }
         }
-        return Collections.emptyList();
+        return List.of();
     }
 
 
